Make JVM respect CPU and RAM limits